@@ -1213,7 +1213,9 @@ Other shear correction factors, based on A.E.H. Love's theory of elasticity,
 are tabulated in 
 reference <a href="http://scitation.aip.org/getabs/servlet/GetabsServlet?prog=normal&id=JAMCAV000033000002000335000001&idtype=cvips&gifs=yes&ref=no">5</a>.
 Additional shear area approximations (below) for solid circular and rectangular sections
-having a Poisson ratio, <i>v</i>, from 0.16 to 0.38 do account for Poisson's effect and have been experimentally validated.  
+do account for Poisson's effect and have been experimentally validated  
+with prismatic beams of materials 
+having a Poisson ratio, <i>v</i>, of 0.16 to 0.38. 
 (See references <a href="http://www.sciencedirect.com/science/article/pii/S0020768310000685">7</a>, 
 <a href="http://iopscience.iop.org/0022-3727/11/14/010">9</a>, and <a href="http://iopscience.iop.org/0022-3727/10/11/009">17</a>.)
 </p>
@@ -1356,8 +1358,7 @@ Asz coefficients
 -->
 
 <p>
-Approximate formulae for the effective shear areas of solid circular and rectangular cross sections including the Poisson effect (for Poisson ratio, <i>v</i>,
-from 0.16 to 0.38) have been experimentally validated.  
+Approximate formulae for the effective shear areas of solid circular and rectangular cross sections including the Poisson effect have been experimentally validated for Poisson ratio, <i>v</i>, from 0.16 to 0.38.  
 (See references <a href="http://iopscience.iop.org/0022-3727/11/14/010">9</a> and <a href="http://iopscience.iop.org/0022-3727/10/11/009">17</a>.)
 
 <ul>
